--- a/join_asvbins/Snakefile
+++ b/join_asvbins/Snakefile
@@ -15,6 +15,7 @@ bins_path = config.get('bins')
 asv_seqs_path = config.get('asv_seqs')
 fasta_extention = config.get('fasta_extention')
 generic_16s_path = config.get('generic_16s')
+allow_empty= config.get('allow_empty')
 s1_mmseqs_sensitivity = config.get('s1_mmseqs_sensitivity')
 s2_mmseqs_sensitivity = config.get('s2_mmseqs_sensitivity')
 s1_min_pct_id = config.get('s1_min_pct_id')
@@ -35,7 +36,6 @@ else:
     path_to_combined_bins = bins_path
 
 
-# TODO fix up tab files describing the matches
 rule all:
     input:
         f"{output_name}_16s_bin_finds_stats.tab",
@@ -50,7 +50,6 @@ rule search1_16s_bin_finds:
         f"{output_name}_16s_bin_finds_seqs.fa"
 
 
-#TODO split bins
 rule search2_asv_bin_matches:
     input:
         f"{output_name}_asv_bin_matches_stats.tab",
@@ -70,13 +69,13 @@ rule stage1_set_output_fasta:
 
 rule stage1_set_output_stats:
     input:
-        f"stage1_asvs_{search_tool}.tab",
-        f"barrnap_stats_excluding_{search_tool}.tab"
+        mbstats_path = f"stage1_asvs_{search_tool}.tab",
+        barstats_raw_path = "barrnap_16S-gff.gff",
+        barstats_corrected_path = f"barrnap_corrected_stats_no_{search_tool}.tab"
     output:
         protected("{output}_16s_bin_finds_stats.tab")
     run:
-        stage1_statistics(input[0], input[1], output[0], search_tool)
-
+        stage1_statistics(**input, output_path=output[0], search_tool=search_tool)
 
 rule stage2_set_output_fasta:
     input:
@@ -88,6 +87,7 @@ rule stage2_set_output_fasta:
         cp {input} {output}
         """
 
+
 rule stage2_set_output_stats:
     input:
         f"stage2_asvs_{search_tool}.tab"
@@ -96,22 +96,23 @@ rule stage2_set_output_stats:
     run:
         stage2_statistics(input[0], output[0], search_tool)
 
+
 rule combine_barrnap_with_other: # where other is blast or mmseqs
     input:
-        other_fasta_path = "stage1_asvs_{tool}_matches.fna",
-        other_stats_path =  "stage1_asvs_{tool}.tab",
+        mbstats_fasta_path = "stage1_asvs_{tool}_matches.fna",
+        mbstats_stats_path =  "stage1_asvs_{tool}.tab",
         barrnap_fasta_path = "barrnap_fastafile-16S.fna"
     output:
         out_fasta_path = "barrnap_and_{tool}_asvs.fna",
-        out_barstats_path = "barrnap_stats_excluding_{tool}.tab"
+        out_barstats_path = "barrnap_corrected_stats_no_{tool}.tab"
     run:
-        combine_mbstats_barrnap(input['other_fasta_path'],
-                                input['other_stats_path'],
-                                input['barrnap_fasta_path'],
-                                output['out_fasta_path'],
-                                output['out_barstats_path'],
-                                min_pct_id = s1_min_pct_id,
-                                min_length = s1_min_length)
+        combine_mbstats_barrnap(**input,
+                                **output,
+                                search_tool= wildcards['tool'],
+                                allow_empty = allow_empty,
+                                min_pct_id=s1_min_pct_id,
+                                min_length=s1_min_length)
+
 
 rule combine_input_fa:
     input:
@@ -134,28 +135,29 @@ rule mmseqs_stage1_search:
     output:
         directory("mmseqs_stage1_db"),
         "stage1_asvs_mmseqs.tab"
-    threads: workflow.cores
-    run:
-       # TODO Split out the db creation, into other rouls if it makes sense seeing as you may need to limit cores
-       # TODO put this in a better format
-       shell("mkdir {output[0]}")
-       shell("mmseqs createdb {input[0]} {output[0]}/target")
-       shell("mmseqs createdb {input[1]} {output[0]}/query")
-       shell("mmseqs search --search-type 3"
-             " {output[0]}/query"
-             " {output[0]}/target"
-             " {output[0]}/mmseqs_out"
-             " temp"
-             " --threads {threads}"
-            f" -s {s2_mmseqs_sensitivity}"
-             )
-       #   f" {s1_mmseqs_sensitivity} \n" # Add sensitivity setting as f string
-       shell("mmseqs convertalis "
-             " --format-output \'query,target,pident,alnlen,mismatch,gapopen,qstart,qend,tstart,tend,evalue,bits,qlen,tlen\'"
-             " {output[0]}/query "
-             " {output[0]}/target "
-             " {output[0]}/mmseqs_out "
-             " {output[1]}")
+    threads:
+        workflow.cores
+    params:
+        sensitivity = s2_mmseqs_sensitivity
+    shell:
+        """
+        mkdir {output[0]}
+        mmseqs createdb {input[0]} {output[0]}/target
+        mmseqs createdb {input[1]} {output[0]}/query
+        mmseqs search --search-type 3 \\
+               {output[0]}/query \\
+               {output[0]}/target \\
+               {output[0]}/mmseqs_out \\
+               temp \\
+               --threads {threads} \\
+               -s {params.sensitivity}
+        mmseqs convertalis \\
+               --format-output \'query,target,pident,alnlen,mismatch,gapopen,qstart,qend,tstart,tend,evalue,bits,qlen,tlen\' \\
+               {output[0]}/query \\
+               {output[0]}/target \\
+               {output[0]}/mmseqs_out \\
+               {output[1]}
+        """
 
 
 rule blast_stage1_search:
@@ -183,6 +185,7 @@ rule pullseq_header_name:
                                      tab_file_path=input[1],
                                      header_column='sseqid')
 
+
 rule mmseqs_stage2_search:
     input:
        "barrnap_and_mmseqs_asvs.fna", # Target
@@ -190,28 +193,29 @@ rule mmseqs_stage2_search:
     output:
        directory("mmseqs_stage2_db"),
        "stage2_asvs_mmseqs.tab"
-    threads: workflow.cores
-    # Add sensitivity seting as f string
-    run:
-       # TODO Split out the db creation, into other rouls if it makes sense seeing as you may need to limit cores
-       # TODO put this in a better format
-       shell("mkdir {output[0]}")
-       shell("mmseqs createdb {input[0]} {output[0]}/target")
-       shell("mmseqs createdb {input[1]} {output[0]}/query")
-       shell("mmseqs search --search-type 3"
-             " {output[0]}/query"
-             " {output[0]}/target"
-             " {output[0]}/mmseqs_out"
-             " temp"
-            f" -s {s2_mmseqs_sensitivity}"
-             )
-       #   f" {s1_mmseqs_sensitivity} \n" # Add sensitivity setting as f string
-       shell("mmseqs convertalis "
-             " --format-output \'query,target,pident,alnlen,mismatch,gapopen,qstart,qend,tstart,tend,evalue,bits,qlen,tlen\'"
-             " {output[0]}/query "
-             " {output[0]}/target "
-             " {output[0]}/mmseqs_out "
-             " {output[1]}")
+    threads:
+        workflow.cores
+    params:
+        sensitivity = s1_mmseqs_sensitivity
+    shell:
+        # TODO Split out the db creation, into other rules if it makes sense seeing as you may need to limit cores
+        """
+        mkdir {output[0]}
+        mmseqs createdb {input[0]} {output[0]}/target
+        mmseqs createdb {input[1]} {output[0]}/query
+        mmseqs search --search-type 3 \\
+               {output[0]}/query \\
+               {output[0]}/target \\
+               {output[0]}/mmseqs_out \\
+               temp \\
+               -s {params.sensitivity}
+        mmseqs convertalis  \\
+               --format-output \'query,target,pident,alnlen,mismatch,gapopen,qstart,qend,tstart,tend,evalue,bits,qlen,tlen\' \\
+               {output[0]}/query \\
+               {output[0]}/target \\
+               {output[0]}/mmseqs_out \\
+               {output[1]}
+        """
 
 
 rule stage2_filtering:
@@ -249,23 +253,51 @@ rule blast_stage2_search:
         """
 
 
-rule run_barrnap:
+rule run_barrnap_barrnap:
     input:
         path_to_combined_bins
     output:
-        "barrnap_fastafile-16S.fna"
-    threads: workflow.cores
-    #TODO Get the stats from the gff file
+        "barrnap_rrna.gff"
+    threads:
+        workflow.cores
     shell:
-        """
-        barrnap --threads {threads} {input} > rrna.gff
-        grep \"16S\" rrna.gff > 16S-gff.gff
-        bedtools getfasta -fi {input} -bed 16S-gff.gff -fo 16S-fasta.fna
-        grep \">\" 16S-fasta.fna | sed 's/>//g' > 16S-id.txt
-        xargs samtools faidx 16S-fasta.fna < 16S-id.txt > {output}
-        """
+        "barrnap --threads {threads} {input} > {output}"
 
 
+rule run_barrnap_16s_gtff:
+    input:
+        "barrnap_rrna.gff"
+    output:
+        "barrnap_16S-gff.gff"
+    shell:
+        "grep \"16S\" {input} > {output}"
 
 
+rule run_barrnap_fasta_filter:
+    input:
+        path_to_combined_bins,
+        "barrnap_16S-gff.gff"
+    output:
+        "barrnap_fasta_raw.fna"
+    shell:
+        "bedtools getfasta -fi {input[0]} -bed {input[1]} -fo {output}"
+
+
+rule run_barrnap_headers:
+    input:
+        "barrnap_fasta_raw.fna"
+    output:
+        "barrnap_16S-id.txt"
+    shell:
+        "grep \">\" {input} | sed 's/>//g' > {output}"
+
+
+rule run_barrnap_fasta_trim:
+    input:
+        "barrnap_fasta_raw.fna",
+        "barrnap_16S-id.txt"
+    output:
+        "barrnap_fasta-16S.fna"
+    shell:
+        "xargs samtools faidx input[0] < input[1] > {output}"
 
