--- a/join_asvbins/Snakefile
+++ b/join_asvbins/Snakefile
@@ -10,7 +10,8 @@ from join_asvbins.snake_functions import combine_mbstats_barrnap, \
 LOCALY_COMBINED_BINS = "all_bins_combined"
 
 search_tool = 'blast' if config['blast'] else 'mmseqs'
-output_name = config.get('output')
+# TODO decide if this is neccicary
+# output_name = config.get('output_name')
 bins_path = config.get('bins')
 asv_seqs_path = config.get('asv_seqs')
 fasta_extention = config.get('fasta_extention')
@@ -38,29 +39,29 @@ else:
 
 rule all:
     input:
-        f"{output_name}_16s_bin_finds_stats.tab",
-        f"{output_name}_16s_bin_finds_seqs.fa",
-        f"{output_name}_asv_bin_matches_stats.tab",
-        f"{output_name}_asv_bin_matches_seqs.fa"
+        "16s_bin_finds_stats.tab",
+        "16s_bin_finds_seqs.fa",
+        "asv_bin_matches_stats.tab",
+        "asv_bin_matches_seqs.fa"
 
 
 rule search1_16s_bin_finds:
     input:
-        f"{output_name}_16s_bin_finds_stats.tab",
-        f"{output_name}_16s_bin_finds_seqs.fa"
+        "16s_bin_finds_stats.tab",
+        "16s_bin_finds_seqs.fa"
 
 
 rule search2_asv_bin_matches:
     input:
-        f"{output_name}_asv_bin_matches_stats.tab",
-        f"{output_name}_asv_bin_matches_seqs.fa"
+        "asv_bin_matches_stats.tab",
+        "asv_bin_matches_seqs.fa"
 
 
 rule stage1_set_output_fasta:
     input:
         f"barrnap_and_{search_tool}_asvs.fna"
     output:
-        protected("{output}_16s_bin_finds_seqs.fa")
+        protected("16s_bin_finds_seqs.fa")
     shell:
         """
         cp {input} {output}
@@ -73,15 +74,16 @@ rule stage1_set_output_stats:
         barstats_raw_path = "barrnap_16S-gff.gff",
         barstats_corrected_path = f"barrnap_corrected_stats_no_{search_tool}.tab"
     output:
-        protected("{output}_16s_bin_finds_stats.tab")
+        protected("16s_bin_finds_stats.tab")
     run:
         stage1_statistics(**input, output_path=output[0], search_tool=search_tool)
+
 
 rule stage2_set_output_fasta:
     input:
         f"barrnap_and_{search_tool}_asvs_matching_seqs.fna"
     output:
-        protected("{output}_asv_bin_matches_seqs.fa")
+        protected("asv_bin_matches_seqs.fa")
     shell:
         """
         cp {input} {output}
@@ -92,7 +94,7 @@ rule stage2_set_output_stats:
     input:
         f"stage2_asvs_{search_tool}.tab"
     output:
-        protected("{output}_asv_bin_matches_stats.tab")
+        protected("asv_bin_matches_stats.tab")
     run:
         stage2_statistics(input[0], output[0], search_tool)
 
@@ -103,8 +105,8 @@ rule combine_barrnap_with_other: # where other is blast or mmseqs
         mbstats_stats_path =  "stage1_asvs_{tool}.tab",
         barrnap_fasta_path = "barrnap_fastafile-16S.fna"
     output:
-        out_fasta_path = "barrnap_and_{tool}_asvs.fna",
-        out_barstats_path = "barrnap_corrected_stats_no_{tool}.tab"
+        out_fasta_path = temp("barrnap_and_{tool}_asvs.fna"),
+        out_barstats_path = temp("barrnap_corrected_stats_no_{tool}.tab)"
     run:
         combine_mbstats_barrnap(**input,
                                 **output,
@@ -118,7 +120,7 @@ rule combine_input_fa:
     input:
         bins_folder
     output:
-        LOCALY_COMBINED_BINS
+        temp(LOCALY_COMBINED_BINS)
     run:
        input_list = glob.glob(
                        os.path.join(input, "*.{fasta_extention}"))
@@ -133,8 +135,8 @@ rule mmseqs_stage1_search:
         path_to_combined_bins,
         generic_16s_path # Query
     output:
-        directory("mmseqs_stage1_db"),
-        "stage1_asvs_mmseqs.tab"
+        temp(directory("mmseqs_stage1_db")),
+        temp("stage1_asvs_mmseqs.tab")
     threads:
         workflow.cores
     params:
@@ -165,8 +167,8 @@ rule blast_stage1_search:
         path_to_combined_bins,
         generic_16s_path # Query
     output:
-        directory("blast_stage1_db"),
-        "stage1_asvs_blast.tab"
+        temp(directory("blast_stage1_db")),
+        temp("stage1_asvs_blast.tab")
     run:
        shell("mkdir {output[0]}")
        shell("makeblastdb -dbtype nucl -in {input[0]} -out {output[0]}/blast_db")
@@ -178,7 +180,7 @@ rule pullseq_header_name:
         path_to_combined_bins,
         "{level}_asvs_{tool}.tab"
     output:
-        "{level}_asvs_{tool}_matches.fna"
+        temp("{level}_asvs_{tool}_matches.fna")
     run:
        pullseqs_header_name_from_tab(in_fasta_path=input[0],
                                      out_fasta_path=output[0],
@@ -191,8 +193,8 @@ rule mmseqs_stage2_search:
        "barrnap_and_mmseqs_asvs.fna", # Target
        asv_seqs_path # Query
     output:
-       directory("mmseqs_stage2_db"),
-       "stage2_asvs_mmseqs.tab"
+       temp(directory("mmseqs_stage2_db")),
+       temp("stage2_asvs_mmseqs.tab")
     threads:
         workflow.cores
     params:
@@ -223,7 +225,7 @@ rule stage2_filtering:
        "stage2_asvs_{tool}.tab",
        "barrnap_and_{tool}_asvs.fna"
     output:
-       "barrnap_and_{tool}_asvs_matching_seqs.fna"
+       temp("barrnap_and_{tool}_asvs_matching_seqs.fna")
     run:
        filter_from_mbstats(
                        stats_file=input[0],
@@ -242,8 +244,8 @@ rule blast_stage2_search:
        "barrnap_and_blast_asvs.fna", # Target
         asv_seqs_path, # Query
     output:
-        directory("blast_stage2_db"),
-        "stage2_asvs_blast.tab"
+        temp(directory("blast_stage2_db")),
+        temp("stage2_asvs_blast.tab")
     shell:
         """
         mkdir {output[0]}
@@ -257,7 +259,7 @@ rule run_barrnap_barrnap:
     input:
         path_to_combined_bins
     output:
-        "barrnap_rrna.gff"
+        temp("barrnap_rrna.gff")
     threads:
         workflow.cores
     shell:
@@ -268,7 +270,7 @@ rule run_barrnap_16s_gtff:
     input:
         "barrnap_rrna.gff"
     output:
-        "barrnap_16S-gff.gff"
+        temp("barrnap_16S-gff.gff")
     shell:
         "grep \"16S\" {input} > {output}"
 
@@ -278,7 +280,7 @@ rule run_barrnap_fasta_filter:
         path_to_combined_bins,
         "barrnap_16S-gff.gff"
     output:
-        "barrnap_fasta_raw.fna"
+        temp("barrnap_fasta_raw.fna")
     shell:
         "bedtools getfasta -fi {input[0]} -bed {input[1]} -fo {output}"
 
@@ -287,7 +289,7 @@ rule run_barrnap_headers:
     input:
         "barrnap_fasta_raw.fna"
     output:
-        "barrnap_16S-id.txt"
+        temp("barrnap_16S-id.txt")
     shell:
         "grep \">\" {input} | sed 's/>//g' > {output}"
 
@@ -297,7 +299,7 @@ rule run_barrnap_fasta_trim:
         "barrnap_fasta_raw.fna",
         "barrnap_16S-id.txt"
     output:
-        "barrnap_fasta-16S.fna"
+        temp("barrnap_fasta-16S.fna")
     shell:
         "xargs samtools faidx input[0] < input[1] > {output}"
 
