--- a/join_asvbins/Snakefile
+++ b/join_asvbins/Snakefile
@@ -4,7 +4,7 @@ import glob
 import pathlib
 import pandas as pd
 from join_asvbins.snake_functions import combine_mbstats_barrnap, \
-    pullseqs_header_name_from_tab, filter_from_mbstats, stage2_statistics
+    pullseqs_header_name_from_tab, filter_from_mbstats
 
 search_tool = 'blast' if config['blast'] else 'mmseqs'
 # TODO decide if this is neccicary
@@ -36,28 +36,28 @@ if os.path.isdir(bins_path):
     bins_folder = bins_path
     path_to_combined_bins = localy_combined_bins
 else:
-    bins_folder = None
+    bins_folder = "None"
     path_to_combined_bins = bins_path
 
 
 rule all:
     input:
-        "16s_bin_finds_stats.tab",
-        "16s_bin_finds_seqs.fna",
-        "asv_bin_matches_stats.tab",
-        "asv_bin_matches_seqs.fna"
+        "canidate_statistics.tab",
+        "canidate_sequences.fna",
+        "match_statistics.tab",
+        "match_sequences.fna"
 
 
 rule search1_16s_bin_finds:
     input:
-        "16s_bin_finds_stats.tab",
-        "16s_bin_finds_seqs.fna"
+        "canidate_statistics.tab",
+        "canidate_sequences.fna"
 
 
 rule search2_asv_bin_matches:
     input:
-        "asv_bin_matches_stats.tab",
-        "asv_bin_matches_seqs.fna"
+        "match_statistics.tab",
+        "match_sequences.fna"
 
 
 # rule stage1_set_output_stats:
@@ -81,15 +81,6 @@ rule search2_asv_bin_matches:
 #         """
 
 
-rule stage2_set_output_stats:
-    input:
-        f"stage2_asvs_{search_tool}.tab"
-    output:
-        protected("asv_bin_matches_stats.tab")
-    run:
-        stage2_statistics(input[0], output[0], search_tool)
-
-
 rule combine_barrnap_with_other: # where other is blast or mmseqs
     input:
         mbstats_fasta_path = f"stage1_asvs_{search_tool}_matches.fna",
@@ -97,8 +88,8 @@ rule combine_barrnap_with_other: # where other is blast or mmseqs
         barrnap_fasta_path = "barrnap_fasta-16S.fna",
         barrnap_stats_path= "barrnap_16S-gff.gff"
     output:
-        out_fasta_path = protected("16s_bin_finds_seqs.fna"),
-        out_stats_path = protected("16s_bin_finds_stats.tab")
+        out_fasta_path = protected("canidate_sequences.fna"),
+        out_stats_path = protected("canidate_statistics.tab")
     run:
         combine_mbstats_barrnap(**input,
                                 **output,
@@ -186,7 +177,7 @@ rule pullseq_header_name:
 
 rule mmseqs_stage2_search:
     input:
-       "16s_bin_finds_seqs.fna", # Target
+       "canidate_sequences.fna", # Target
        asv_seqs_path # Query
     output:
        temp(directory("mmseqs_stage2_db")),
@@ -223,10 +214,11 @@ rule mmseqs_stage2_search:
 
 rule stage2_filtering:
     input:
-       stats_file = f"stage2_asvs_{search_tool}.tab",
-       fasta_file_in = "16s_bin_finds_seqs.fna"
+       stats_file_in = f"stage2_asvs_{search_tool}.tab",
+       fasta_file_in = "canidate_sequences.fna"
     output:
-        fasta_file_out = protected("asv_bin_matches_seqs.fna")
+        fasta_file_out = protected("match_sequences.fna"),
+        stats_file_out = protected("match_statistics.tab")
     run:
        filter_from_mbstats(
                        **input,
@@ -235,7 +227,8 @@ rule stage2_filtering:
                        min_length=s2_min_length,
                        min_len_pct=s2_min_len_pct,
                        max_gaps=s2_max_gaps,
-                       max_missmatch=s2_max_missmatch
+                       max_missmatch=s2_max_missmatch,
+                       search_tool=search_tool
                        )
 
 
@@ -259,13 +252,14 @@ rule run_barrnap_barrnap:
     input:
         path_to_combined_bins
     output:
-        temp("barrnap_rrna.gff")
+        temp("barrnap_rrna.gff"),
+        temp(f"{path_to_combined_bins}.fai")
     threads:
         workflow.cores
     params:
         verbosity = "--quiet" if verbosity < 3 else ""
     shell:
-        "barrnap --threads {threads} {params.verbosity} {input} > {output}"
+        "barrnap --threads {threads} {params.verbosity} {input} > {output[0]}"
 
 
 rule run_barrnap_16s_gtff:
@@ -282,7 +276,7 @@ rule run_barrnap_fasta_filter:
         path_to_combined_bins,
         "barrnap_16S-gff.gff"
     output:
-        temp("barrnap_fasta_raw.fna")
+        temp("barrnap_fasta_raw.fna"),
     shell:
         "bedtools getfasta -fi {input[0]} -bed {input[1]} -fo {output}"
 
