--- a/join_asvbins/Snakefile
+++ b/join_asvbins/Snakefile
@@ -42,21 +42,21 @@ else:
 
 rule all:
     input:
-        "canidate_statistics.tab",
-        "canidate_sequences.fna",
-        "match_statistics.tab",
+        "candidate_statistics.tsv",
+        "candidate_sequences.fna",
+        "match_statistics.tsv",
         "match_sequences.fna"
 
 
 rule search1_16s_bin_finds:
     input:
-        "canidate_statistics.tab",
-        "canidate_sequences.fna"
+        "candidate_statistics.tsv",
+        "candidate_sequences.fna"
 
 
 rule search2_asv_bin_matches:
     input:
-        "match_statistics.tab",
+        "match_statistics.tsv",
         "match_sequences.fna"
 
 
@@ -88,8 +88,8 @@ rule combine_barrnap_with_other: # where other is blast or mmseqs
         barrnap_fasta_path = "barrnap_fasta-16S.fna",
         barrnap_stats_path= "barrnap_16S-gff.gff"
     output:
-        out_fasta_path = protected("canidate_sequences.fna"),
-        out_stats_path = protected("canidate_statistics.tab")
+        out_fasta_path = protected("candidate_sequences.fna"),
+        out_stats_path = protected("candidate_statistics.tsv")
     run:
         combine_mbstats_barrnap(**input,
                                 **output,
@@ -177,7 +177,7 @@ rule pullseq_header_name:
 
 rule mmseqs_stage2_search:
     input:
-       "canidate_sequences.fna", # Target
+       "candidate_sequences.fna", # Target
        asv_seqs_path # Query
     output:
        temp(directory("mmseqs_stage2_db")),
@@ -215,10 +215,10 @@ rule mmseqs_stage2_search:
 rule stage2_filtering:
     input:
        stats_file_in = f"stage2_asvs_{search_tool}.tab",
-       fasta_file_in = "canidate_sequences.fna"
+       fasta_file_in = "candidate_sequences.fna"
     output:
         fasta_file_out = protected("match_sequences.fna"),
-        stats_file_out = protected("match_statistics.tab")
+        stats_file_out = protected("match_statistics.tsv")
     run:
        filter_from_mbstats(
                        **input,
@@ -252,8 +252,7 @@ rule run_barrnap_barrnap:
     input:
         path_to_combined_bins
     output:
-        temp("barrnap_rrna.gff"),
-        temp(f"{path_to_combined_bins}.fai")
+        temp("barrnap_rrna.gff")
     threads:
         workflow.cores
     params:
@@ -277,8 +276,9 @@ rule run_barrnap_fasta_filter:
         "barrnap_16S-gff.gff"
     output:
         temp("barrnap_fasta_raw.fna"),
+        temp(f"{path_to_combined_bins}.fai")
     shell:
-        "bedtools getfasta -fi {input[0]} -bed {input[1]} -fo {output}"
+        "bedtools getfasta -fi {input[0]} -bed {input[1]} -fo {output[0]}"
 
 
 rule run_barrnap_headers:
@@ -295,7 +295,8 @@ rule run_barrnap_fasta_trim:
         "barrnap_fasta_raw.fna",
         "barrnap_16S-id.txt"
     output:
-        temp("barrnap_fasta-16S.fna")
+        temp("barrnap_fasta-16S.fna"),
+        temp("barrnap_fasta_raw.fna.fai")
     shell:
-        "xargs samtools faidx {input[0]} < {input[1]} > {output}"
+        "xargs samtools faidx {input[0]} < {input[1]} > {output[0]}"
 
