fix snakemake dependence in yaml

--- a/environment.yaml
+++ b/environment.yaml
@@ -9,7 +9,6 @@ dependencies:
   - scikit-bio
   - mmseqs2!=10.6d92c
   - barrnap
-  - snakemake
-  - pip
+  - snakemake-minimal
   - pip:
     - join_asvbins
